[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Environment/background.png" type="Texture" id=1]
[ext_resource path="res://data/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/Stages/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/Effects/ChromaticAberration.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/Stages/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/Environment/zoomlines.png" type="Texture" id=6]
[ext_resource path="res://data/Stages/Rockspawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://data/Effects/WorldEnvironment.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "zoom"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 8 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="background" type="Sprite" parent="CanvasLayer"]
self_modulate = Color( 0.113725, 0.113725, 0.113725, 1 )
position = Vector2( 236.523, 322.317 )
texture = ExtResource( 1 )

[node name="Zoomlines" type="Sprite" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.223529 )
position = Vector2( 240, 320 )
texture = ExtResource( 6 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Zoomlines"]
autoplay = "zoom"
anims/zoom = SubResource( 1 )

[node name="Deathmessage" type="RichTextLabel" parent="CanvasLayer"]
visible = false
margin_top = 192.0
margin_right = 480.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Game Over

Press any key to restart[/center]"
text = "Game Over

Press any key to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winmessage" type="RichTextLabel" parent="CanvasLayer"]
visible = false
margin_top = 192.0
margin_right = 480.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]You Win

Press any key to restart[/center]"
text = "You Win

Press any key to restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 218.914, 252.285 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]

[node name="Rockspawn" parent="." instance=ExtResource( 7 )]

[node name="WorldEnvironment" parent="." instance=ExtResource( 10 )]

[node name="ChromaticAberration" type="CanvasLayer" parent="."]

[node name="TextureRect" parent="ChromaticAberration" instance=ExtResource( 4 )]

[node name="BossTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="HealthSpawns" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="HealthSpawns"]
position = Vector2( 104, 712 )

[node name="Position2D2" type="Position2D" parent="HealthSpawns"]
position = Vector2( 384, 712 )

[node name="HealthTimer" type="Timer" parent="HealthSpawns"]
wait_time = 5.0
autostart = true
[connection signal="damaged" from="Player" to="." method="_on_Player_damaged"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]
[connection signal="timeout" from="HealthSpawns/HealthTimer" to="." method="_on_HealthTimer_timeout"]
